fix card spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,12 @@ input {
   width: 300px;
   font-size: 35px;
   color: #BBBDF6;
+  border: 2px solid #457B9D;
 }
 
 input::placeholder {
   font-size: 25px;
-  color: #553A41;
+  color: #457B9D;
 }
 
 .header {
